remove list likes
