# service/api/api-handler.go
@@ -40,7 +40,6 @@ func (rt *_router) Handler() http.Handler {
 	rt.router.DELETE("/photo/:photoId/comments/:commentId", rt.wrap(rt.UncommentPhoto))
 
 	// Likes
-	rt.router.GET("/photo/:photoId/likes", rt.wrap(rt.ListLikes))
 	rt.router.PUT("/photo/:photoId/likes/:username", rt.wrap(rt.LikeUnlike))
 	rt.router.DELETE("/photo/:photoId/likes/:username", rt.wrap(rt.LikeUnlike))
 
