# service/api/endpoints-likes.go
@@ -1,7 +1,6 @@
 package api
 
 import (
-	"encoding/json"
 	"net/http"
 
 	"github.com/bibi2001/WASAPhoto/service/api/reqcontext"
@@ -37,22 +36,4 @@ func (rt *_router) LikeUnlike(w http.ResponseWriter, r *http.Request, ps httprou
 		w.WriteHeader(http.StatusNoContent)
 	}
 
-}
-
-func (rt *_router) ListLikes(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
-	// Read the photoId from the parameters
-	photoId := ps.ByName("photoId")
-
-	// Get the likes list from the database
-	likeList, err := rt.db.ListLikes(utils.ToInt64(photoId))
-	if err != nil {
-		ctx.Logger.WithError(err).Error("could not get likes list")
-		http.Error(w, "Internal Server Error", http.StatusInternalServerError)
-		return
-	}
-
-	// Return likes list
-	w.Header().Set("Content-Type", "application/json")
-	w.WriteHeader(http.StatusOK)
-	_ = json.NewEncoder(w).Encode(likeList)
 }
